--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -16,6 +16,7 @@
     align-items: center;
     max-width: 1240px;
     margin: auto;
+    margin-top: 10px;
     height: 100%;
     padding: 0 1rem;
 }
